crates/lexer/tests/snapshots/identifier.snap
---
source: crates/lexer/tests/lib.rs
assertion_line: 16
expression: identifier

---
# Input
$ _ $a _a abc_$
\u03bc \u{61} x\u03bc x\u{61}
x‍ x‌

---
# Output
[
    Token {
        kind: Ident,
        offset: 0,
        len: 1,
    },
    Token {
        kind: Ident,
        offset: 2,
        len: 1,
    },
    Token {
        kind: Ident,
        offset: 4,
        len: 2,
    },
    Token {
        kind: Ident,
        offset: 7,
        len: 2,
    },
    Token {
        kind: Ident,
        offset: 10,
        len: 5,
    },
    Token {
        kind: LineTerminator,
        offset: 15,
        len: 1,
    },
    Token {
        kind: Ident,
        offset: 16,
        len: 6,
    },
    Token {
        kind: Ident,
        offset: 23,
        len: 6,
    },
    Token {
        kind: Ident,
        offset: 30,
        len: 7,
    },
    Token {
        kind: Ident,
        offset: 38,
        len: 7,
    },
    Token {
        kind: LineTerminator,
        offset: 45,
        len: 1,
    },
    Token {
        kind: Ident,
        offset: 46,
        len: 4,
    },
    Token {
        kind: Ident,
        offset: 51,
        len: 4,
    },
    Token {
        kind: EOF,
        offset: 55,
        len: 1,
    },
]
