crates/lexer/tests/snapshots/regex.snap
---
source: crates/lexer/tests/lib.rs
assertion_line: 16
expression: regex

---
# Input
/aa/;
/[0-9A-Za-z_\$(|)\[\]\/\\^]/;
/[//]/;
/[/]/;

---
# Output
[
    Token {
        kind: Regex,
        offset: 0,
        len: 4,
    },
    Token {
        kind: Semicolon,
        offset: 4,
        len: 1,
    },
    Token {
        kind: Regex,
        offset: 6,
        len: 28,
    },
    Token {
        kind: Semicolon,
        offset: 34,
        len: 1,
    },
    Token {
        kind: Regex,
        offset: 36,
        len: 6,
    },
    Token {
        kind: Semicolon,
        offset: 42,
        len: 1,
    },
    Token {
        kind: Regex,
        offset: 44,
        len: 5,
    },
    Token {
        kind: Semicolon,
        offset: 49,
        len: 1,
    },
    Token {
        kind: EOF,
        offset: 50,
        len: 1,
    },
]
