crates/lexer/tests/snapshots/template_literal.snap
---
source: crates/lexer/tests/lib.rs
assertion_line: 16
expression: template_literal

---
# Input
``
`123`
`\`\r`

---
# Output
[
    Token {
        kind: Template,
        offset: 0,
        len: 2,
    },
    Token {
        kind: LineTerminator,
        offset: 2,
        len: 1,
    },
    Token {
        kind: Template,
        offset: 3,
        len: 5,
    },
    Token {
        kind: LineTerminator,
        offset: 8,
        len: 1,
    },
    Token {
        kind: Template,
        offset: 9,
        len: 6,
    },
    Token {
        kind: EOF,
        offset: 15,
        len: 1,
    },
]
